z-index solved

--- a/css/style.css
+++ b/css/style.css
@@ -104,6 +104,7 @@ section {
   transition: 1s;
   font-size: 24px;
   font-weight: 500;
+  z-index: 50;
 }
 
 .btn-register:hover {
